302		EU3 vassals never have vassals
303		Juniors in a PU never have vassals
304		Update readme for converter mod
305		Added tag 0.6 Release for changeset 9489bf5e37c5
306		Incorporate years_ruled opinion modifier
307		HRE Electors
308		Add Jerusalem1401 save (from 1.09)
309		Better warning message when unable to determine culture or religion.
310		Fix crash bug from HRE title being destroyed
311		Fix resaving bug
312		Process many things only after assigning tags
313		Solve some cases of governments not being assigned
314		More government adjustments
315		Ultimogeniture succession
316		Tanistry succession
317		Merge in minor features
318		Merge in bugfixes
319		Added tag 0.6A Release for changeset 480cef6655c2
320		Map tags for some new 1.09 titles.
321		Merge main to minor
322		Merge main to bugfixes
323		Extra logging for tech group conversion
324		Don't crash if religions tie on multiple criteria.
325		Read titular settlements and allow them to be a character's primary holding.
326		Read dynamic titles and their settlements.
327		Don't erase the buildings from the building map after adding them.
328		If the title specified for HRETitle doesn't exist, don't try to set up the HRE mechanics.
329		Add tax/pop/manpower proxies for family palaces (unused, but silences an error).
		Correct manpower proxy for temples.
330		Don't generate EU3 supply for the null tradegood.
331		Merge bugfixes to minor.
332		More province mappings adjustments.
333		More province mappings adjustments, Arabian Peninsula and Horn of Africa.
334
335
336
337
338
339
340
341
342
343
344
345
346
347		Tech group improvments
348
349
350
351
352
353
354		Unlanded countries inherit tech group from holder of their potential capital
355		Add second method of tech group conversion
356		Updates to second method
357		Mod output creates country files
358		Mod output creates working mod + save
359		Stuff for mod creation located in converter mod directory
360		Mod files directory removed