@@ -365,3 +365,4 @@ Revision	Log Message
 358		Mod output creates working mod + save
 359		Stuff for mod creation located in converter mod directory
 360		Mod files directory removed
+361		Create flags for new EU3 countries
